2008-03-27  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/35724
	* gfortran.dg/cshift_shift_real_2.f90: New test.

2008-03-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/uninit-16.c (decode_reloc): Mark static.

2008-03-26  Jakub Jelinek  <jakub@redhat.com>

	PR c++/35546
	* g++.dg/ext/attrib33.C: New test.

	PR c++/35332
	* g++.dg/other/error27.C: New test.

2008-03-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-03-19  Richard Guenther  <rguenther@suse.de>

	PR middle-end/35609
	* gcc.dg/testsuite/uninit-15.c: New testcase.
	* gcc.dg/testsuite/uninit-16.c: Likewise.

2008-03-24  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34813
	* gfortran.dg/null_3.f90 : New test

	PR fortran/33295
	* gfortran.dg/module_function_type_1.f90 : New test

2008-03-21  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-03-20  Victor Kaplansky  <victork@gcc.gnu.org>
		    Uros Bizjak  <ubizjak@gmail.com>

	PR testsuite/34168
	* lib/target-supports.exp (check_sse2_hw_available): New procedure.
	* gcc.dg/vect/vect.exp: Set dg-do-what-default to "compile"
	if SSE2 hardware is not available.
	* g++.dg/vect/vect.exp: Update target-dependent overrides to match
	gcc.dg/vect/vect.exp.
	* gfortran.dg/vect/vect.exp: Ditto.
	(check_effective_target_lp64_or_vect_no_align): Remove procedure.

	2008-03-20  Uros Bizjak  <ubizjak@gmail.com>

        * gcc.dg/gomp/pr34692.c: Cleanup gimple dump file.

2008-03-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	Backport from trunk:
	PR libfortran/35627
	* gfortran.dg/namelist_46.f90: New test.

	PR libfortran/35617
	* gfortran.dg/namelist_45.f90: New test.

2008-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2008-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR testsuite/35621
	* gcc.target/i386/ssse3-pabsb.c: Add -fno-strict-aliasing.
	* gcc.target/i386/ssse3-pabsd.c: Likewise.
	* gcc.target/i386/ssse3-pabsw.c: Likewise.
	* gcc.target/i386/ssse3-palignr.c: Likewise.